# mpi_demos

./: README.md  common_1.cmake  common_2.cmake
mpi_hello_world/: CMakeLists.txt
random_work/: CMakeLists.txt  main.cpp
send_recv/: CMakeLists.txt  basic.cpp  basic.h  send_recv_1.cpp  send_recv_2.cpp  send_recv_3.cpp
